--- a/notebook/example.ipynb
+++ b/notebook/example.ipynb
@@ -2,9 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "701.75s - Error inserting pydevd breaks.\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\_pydevd_frame_eval\\pydevd_modify_bytecode.py\", line 331, in insert_pydevd_breaks\n",
+      "    _pydev_needs_stop_at_break=_pydev_needs_stop_at_break,\n",
+      "  File \"c:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\_pydevd_frame_eval\\pydevd_modify_bytecode.py\", line 102, in get_instructions_to_add\n",
+      "    Instr(\"LOAD_CONST\", _pydev_stop_at_break, lineno=stop_at_line - 1),\n",
+      "  File \"c:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\_pydevd_frame_eval\\vendored\\bytecode\\instr.py\", line 171, in __init__\n",
+      "    self._set(name, arg, lineno)\n",
+      "  File \"c:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\_pydevd_frame_eval\\vendored\\bytecode\\instr.py\", line 239, in _set\n",
+      "    _check_lineno(lineno)\n",
+      "  File \"c:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\_pydevd_frame_eval\\vendored\\bytecode\\instr.py\", line 74, in _check_lineno\n",
+      "    raise ValueError(\"invalid lineno\")\n",
+      "ValueError: invalid lineno\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting matplotlib\n",
+      "  Downloading matplotlib-3.5.2-cp37-cp37m-win_amd64.whl (7.2 MB)\n",
+      "     ---------------------------------------- 7.2/7.2 MB 356.5 kB/s eta 0:00:00\n",
+      "Collecting cycler>=0.10\n",
+      "  Using cached cycler-0.11.0-py3-none-any.whl (6.4 kB)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (1.21.6)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (21.3)\n",
+      "Collecting pillow>=6.2.0\n",
+      "  Downloading Pillow-9.2.0-cp37-cp37m-win_amd64.whl (3.3 MB)\n",
+      "     ---------------------------------------- 3.3/3.3 MB 407.3 kB/s eta 0:00:00\n",
+      "Collecting kiwisolver>=1.0.1\n",
+      "  Downloading kiwisolver-1.4.4-cp37-cp37m-win_amd64.whl (54 kB)\n",
+      "     -------------------------------------- 54.9/54.9 kB 720.1 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (3.0.9)\n",
+      "Collecting fonttools>=4.22.0\n",
+      "  Downloading fonttools-4.34.4-py3-none-any.whl (944 kB)\n",
+      "     ------------------------------------ 944.1/944.1 kB 415.1 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from kiwisolver>=1.0.1->matplotlib) (4.3.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Installing collected packages: pillow, kiwisolver, fonttools, cycler, matplotlib\n",
+      "Successfully installed cycler-0.11.0 fonttools-4.34.4 kiwisolver-1.4.4 matplotlib-3.5.2 pillow-9.2.0\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import namedtuple"
    ]
@@ -28,15 +76,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'namedtuple' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_13268\\1887022911.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# From where the dats is coming is stored in this artifact\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m DataIngestionConfig=namedtuple(\"DataIngestionConfig\",\n\u001b[0m\u001b[0;32m      4\u001b[0m [\"dataset_download_url\",\"tgz_download_dir\",\"raw_data_dir\",\"ingested_train_dir\",\"ingested_test_dir\"])\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'namedtuple' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# From where the dats is coming is stored in this artifact\n",
-    "\n",
-    "DataIngestionConfig=namedtuple(\"DataIngestionConfig\",\n",
-    "[\"dataset_download_url\",\"tgz_download_dir\",\"raw_data_dir\",\"ingested_train_dir\",\"ingested_test_dir\"])\n",
-    "\n"
+    "# From where the dats is coming is stored in this artifact\n"
    ]
   },
   {
@@ -360,28 +416,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: openpyxl in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (3.0.10)\n",
-      "Requirement already satisfied: et-xmlfile in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from openpyxl) (1.1.0)\n"
+      "Requirement already satisfied: matplotlib in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (3.5.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (9.2.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (4.34.4)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from matplotlib) (1.21.6)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from kiwisolver>=1.0.1->matplotlib) (4.3.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\mritu\\pycharmprojects\\projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
      ]
     }
    ],
    "source": [
-    "! pip install openpyxl\n",
-    "\n",
-    "\n",
-    "import pandas as pd"
+    "! pip install matplotlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -621,15 +693,72 @@
        "[10683 rows x 11 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "df=pd.read_excel('train.xlsx',engine='openpyxl')\n",
-    "df"
+    "flighfare_df=pd.read_excel('train.xlsx',engine='openpyxl')\n",
+    "flighfare_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Airline', 'Date_of_Journey', 'Source', 'Destination', 'Route',\n",
+       "       'Dep_Time', 'Arrival_Time', 'Duration', 'Total_Stops',\n",
+       "       'Additional_Info', 'Price'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flighfare_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'median_fareprice'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   2897\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2898\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2899\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'median_fareprice'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_13268\\4293027343.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m flighfare_df[\"flightfare_cat\"] = pd.cut(\n\u001b[1;32m----> 2\u001b[1;33m                 \u001b[0mflighfare_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"median_fareprice\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m                 \u001b[0mbins\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minf\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                 \u001b[0mlabels\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m             )\n",
+      "\u001b[1;32mc:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2904\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2905\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2906\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2907\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2908\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\flight_fare_prediction\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   2898\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2899\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2900\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2901\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2902\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'median_fareprice'"
+     ]
+    }
+   ],
+   "source": [
+    "flighfare_df[\"flightfare_cat\"] = pd.cut(\n",
+    "                flighfare_df[\"median_fareprice\"],\n",
+    "                bins=[0.0, 1.5, 3.0, 4.5, 6.0, np.inf],\n",
+    "                labels=[1,2,3,4,5]\n",
+    "            )"
    ]
   },
   {
