--- a/notebook/example2.ipynb
+++ b/notebook/example2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "[10682 rows x 30 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,26 +452,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Total_Stops', 'Price', 'Journey_day', 'Journey_month', 'Dep_hour',\n",
-       "       'Dep_min', 'Arrival_hour', 'Arrival_min', 'Duration_hours',\n",
-       "       'Duration_mins', 'Airline_Air India', 'Airline_GoAir', 'Airline_IndiGo',\n",
-       "       'Airline_Jet Airways', 'Airline_Jet Airways Business',\n",
-       "       'Airline_Multiple carriers',\n",
-       "       'Airline_Multiple carriers Premium economy', 'Airline_SpiceJet',\n",
-       "       'Airline_Trujet', 'Airline_Vistara', 'Airline_Vistara Premium economy',\n",
-       "       'Source_Chennai', 'Source_Delhi', 'Source_Kolkata', 'Source_Mumbai',\n",
-       "       'Destination_Cochin', 'Destination_Delhi', 'Destination_Hyderabad',\n",
-       "       'Destination_Kolkata', 'Destination_New Delhi'],\n",
-       "      dtype='object')"
+       "{'Total_Stops': dtype('float64'),\n",
+       " 'Price': dtype('float64'),\n",
+       " 'Journey_day': dtype('float64'),\n",
+       " 'Journey_month': dtype('float64'),\n",
+       " 'Dep_hour': dtype('float64'),\n",
+       " 'Dep_min': dtype('float64'),\n",
+       " 'Arrival_hour': dtype('float64'),\n",
+       " 'Arrival_min': dtype('float64'),\n",
+       " 'Duration_hours': dtype('float64'),\n",
+       " 'Duration_mins': dtype('float64'),\n",
+       " 'Airline_Air India': dtype('float64'),\n",
+       " 'Airline_GoAir': dtype('float64'),\n",
+       " 'Airline_IndiGo': dtype('float64'),\n",
+       " 'Airline_Jet Airways': dtype('float64'),\n",
+       " 'Airline_Jet Airways Business': dtype('float64'),\n",
+       " 'Airline_Multiple carriers': dtype('float64'),\n",
+       " 'Airline_Multiple carriers Premium economy': dtype('float64'),\n",
+       " 'Airline_SpiceJet': dtype('float64'),\n",
+       " 'Airline_Trujet': dtype('float64'),\n",
+       " 'Airline_Vistara': dtype('float64'),\n",
+       " 'Airline_Vistara Premium economy': dtype('float64'),\n",
+       " 'Source_Chennai': dtype('float64'),\n",
+       " 'Source_Delhi': dtype('float64'),\n",
+       " 'Source_Kolkata': dtype('float64'),\n",
+       " 'Source_Mumbai': dtype('float64'),\n",
+       " 'Destination_Cochin': dtype('float64'),\n",
+       " 'Destination_Delhi': dtype('float64'),\n",
+       " 'Destination_Hyderabad': dtype('float64'),\n",
+       " 'Destination_Kolkata': dtype('float64'),\n",
+       " 'Destination_New Delhi': dtype('float64')}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +500,7 @@
     "dd={}\n",
     "for i in df.columns:\n",
     "    dd[i]=df[i].dtype\n",
-    "df.columns"
+    "dd"
    ]
   },
   {
