--- a/notebook/example2.ipynb
+++ b/notebook/example2.ipynb
@@ -1403,6 +1403,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "b = numpy.load(r'C:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\housing\\artifact\\data_transformation\\2022-08-28-15-11-03\\transformed_data\\train\\new_train2.npz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'files'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_9032\\4143159087.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'files'"
+     ]
+    }
+   ],
+   "source": [
+    "print(b.files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ColumnTransformer(transformers=[('num_pipeline',\n",
+      "                                 Pipeline(steps=[('imputer',\n",
+      "                                                  SimpleImputer(strategy='median')),\n",
+      "                                                 ('feature_generator',\n",
+      "                                                  FeatureGenerator(columns=['Total_Stops',\n",
+      "                                                                            'Journey_day',\n",
+      "                                                                            'Journey_month',\n",
+      "                                                                            'Dep_hour',\n",
+      "                                                                            'Dep_min',\n",
+      "                                                                            'Arrival_hour',\n",
+      "                                                                            'Arrival_min',\n",
+      "                                                                            'Duration_hours',\n",
+      "                                                                            'Duration_mins'])),\n",
+      "                                                 ('scaler', StandardScaler())]),\n",
+      "                                 ['Total_Stops', 'Journey_day', 'Journey_month',\n",
+      "                                  'Dep_hour', 'Dep_min', 'Arrival_hour',\n",
+      "                                  'Arrival_min', 'Duration_hours',\n",
+      "                                  'Duration_mins']),\n",
+      "                                ('cat_pipeline',\n",
+      "                                 Pipeline(steps=[('impute',\n",
+      "                                                  SimpleImputer(strategy='most_frequent')),\n",
+      "                                                 ('one_hot_encoder',\n",
+      "                                                  OneHotEncoder()),\n",
+      "                                                 ('scaler',\n",
+      "                                                  StandardScaler(with_mean=False))]),\n",
+      "                                 ['Airline', 'Source', 'Destination'])])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "athletes_df_file = open(r\"C:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\housing\\artifact\\data_transformation\\2022-08-28-15-11-03\\preprocessed\\preprocessed.pkl\", \"rb\")\n",
+    "athletes = pickle.load(athletes_df_file)\n",
+    "athletes_df_file.close()\n",
+    "print(athletes)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
