--- a/notebook/rough.ipynb
+++ b/notebook/rough.ipynb
@@ -1859,6 +1859,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickled_model = pickle.load(open(r'C:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\housing\\artifact\\model_trainer\\2022-09-03-17-14-58\\trained_model\\model.pkl', 'rb'))\n",
+    "# pickled_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression()\n"
+     ]
+    }
+   ],
+   "source": [
+    "athletes_df_file = open(r\"C:\\Users\\mritu\\PycharmProjects\\Projects\\flight_fare_prediction\\housing\\artifact\\model_trainer\\2022-09-03-17-14-58\\trained_model\\model.pkl\", \"rb\")\n",
+    "athletes = pickle.load(athletes_df_file)\n",
+    "print(athletes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1867,7 +1912,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.0 (conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1883,7 +1928,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.7.0"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "cc2bdd7dc7d8799803f67597d5dc39cae16f9811d31bc23f9df61f1a905453bc"
